Fragment, Layout 이름 정리

--- a/app/src/main/res/layout/fragment_add_route_map.xml
+++ b/app/src/main/res/layout/fragment_add_route_map.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="mapSearchfrag"
-            type="com.thustop_00.LocationMapSearchFragment" />
+            type="com.thustop_00.AddRouteMapFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
