--- a/app/src/main/res/layout/fragment_register_terms.xml
+++ b/app/src/main/res/layout/fragment_register_terms.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="AgreeTermsfrag"
-            type="com.thustop_00.Agree_TermsFragment" />
+            type="com.thustop_00.RegisterTermsFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
