--- a/app/src/main/res/layout/fragment_register_verification.xml
+++ b/app/src/main/res/layout/fragment_register_verification.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="IDVerfrag"
-            type="com.thustop_00.IdVerificationFragment" />
+            type="com.thustop_00.RegisterVerificationFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/background_layout"
