--- a/app/src/main/res/drawable/selectable_item_background.xml
+++ b/app/src/main/res/drawable/selectable_item_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--Recycler item 터치했을 때 애니매이션 나오게 하는 drawable-->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorPrimary"
+    android:color="?attr/colorControlHighlight"
     >
 
     <item
