드로어블이랑 레이아웃 작업중70%/빌드및 실행에 문제없게 처리는 해뒀음/

--- a/app/src/main/res/layout/fragment_find_password.xml
+++ b/app/src/main/res/layout/fragment_find_password.xml
@@ -27,7 +27,7 @@
             android:textColor="@android:color/black"
             android:textColorHint="#979797"
             android:hint="@string/et_name_find"
-            android:background="@drawable/button_round_outlineb6"
+            android:background="@drawable/outline_gray_b6"
             app:layout_constraintBottom_toTopOf="@id/et_phone_find"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline1"
@@ -46,7 +46,7 @@
             style="@style/EtStyle"
             android:hint="@string/et_phone_find"
             android:textColorHint="#979797"
-            android:background="@drawable/button_round_outlineb6"
+            android:background="@drawable/outline_gray_b6"
             app:layout_constraintTop_toBottomOf="@id/et_name_find"
             app:layout_constraintStart_toStartOf="@id/et_name_find"
             app:layout_constraintEnd_toEndOf="@id/et_name_find"
@@ -58,9 +58,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/button_round_green"
-            android:paddingTop="17dp"
-            android:paddingBottom="17dp"
+            android:background="@drawable/round_green"
             android:text="@string/bt_IssuePass_find"
             android:textColor="@color/colorWhite"
             android:textSize="16sp"
