--- a/app/src/main/res/drawable/checkbox_trans_sel.xml
+++ b/app/src/main/res/drawable/checkbox_trans_sel.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/unchecked_box_2"
+        android:drawable="@drawable/checkbox_trans_un"
         android:state_checked="false"/>
     <item
-        android:drawable="@drawable/checked_box_2"
+        android:drawable="@drawable/checkbox_trans"
         android:state_checked="true"/>
-    <item android:drawable="@drawable/unchecked_box"/>
+    <item android:drawable="@drawable/checkbox_trans_un"/>
 </selector>
