--- a/app/src/main/res/drawable/round_gray_e7.xml
+++ b/app/src/main/res/drawable/round_gray_e7.xml
@@ -1,18 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
-        <shape android:shape="rectangle">
-            <solid android:color="#e7e7e7" />
-            <corners android:radius="25dp" />
-        </shape>
-        <shape android:shape="rectangle">
-            <solid android:color="#0c000000"/>
-            <corners android:radius="25dp"/>
-            <padding
-                android:bottom="1dp"
-                android:left="0dp"
-                android:right="0dp"
-                android:top="0dp"/>
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#e7e7e7" />
+    <corners android:radius="25dp"/>
+</shape>
