--- a/app/src/main/res/drawable/round_gray_fa_12.xml
+++ b/app/src/main/res/drawable/round_gray_fa_12.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorWhite" />
-    <corners android:radius="25dp" />
-    <stroke android:width="1dp" android:color="#F0655C"/>
+    <solid android:color="#fafafa" />
+    <corners android:radius="12dp"/>
 </shape>
