--- a/app/src/main/res/layout/fragment_add_route_map.xml
+++ b/app/src/main/res/layout/fragment_add_route_map.xml
@@ -155,7 +155,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="30dp"
-                android:background="@drawable/button_round_green"
+                android:background="@drawable/round_green"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
                 android:text="확인"
