--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -39,13 +39,13 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="12dp"
-            android:background="@drawable/main_sel_local"
+            android:background="@drawable/outline_gray_fa_ee"
             android:elevation="11dp"
             android:paddingStart="40dp"
             android:paddingTop="9dp"
             android:paddingEnd="5dp"
             android:paddingBottom="9dp"
-            android:text="서비스 지역 선택"
+            android:text="@string/tvSelLocal"
             android:textColor="#979797"
             android:textSize="13sp"
             android:onClick="@{mainfrag::onSelLocalClick}"
@@ -113,7 +113,7 @@
             android:id="@+id/layout_local"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/main_sel_local"
+            android:background="@drawable/outline_gray_fa_ee"
             app:layout_constraintEnd_toEndOf="@id/tvSelLocal"
             app:layout_constraintStart_toStartOf="@id/tvSelLocal"
             app:layout_constraintTop_toBottomOf="@id/tvSelLocal"
@@ -124,10 +124,12 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintDimensionRatio="1"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/button_round_light_gray"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/button_local"
                 android:text="@string/bt_local1"
+                android:textColor="#454545"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@id/bt_local2"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
@@ -139,14 +141,16 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintDimensionRatio="1"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/button_round_light_gray"
+                android:layout_marginStart="27dp"
+                android:background="@drawable/button_local"
                 android:text="@string/bt_local2"
+                android:textColor="#454545"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@id/bt_local3"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@id/bt_local1"
-                app:layout_constraintTop_toTopOf="@id/layout_local"
+                app:layout_constraintTop_toTopOf="@id/bt_local1"
+                app:layout_constraintBottom_toBottomOf="@id/bt_local1"
                 android:onClick="@{mainfrag::onLocal2Click}"/>
 
             <com.thustop_00.widgets.NotoButton
@@ -154,15 +158,17 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintDimensionRatio="1"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/button_round_light_gray"
+                android:layout_marginStart="27dp"
+                android:layout_marginEnd="25dp"
+                android:background="@drawable/button_local"
                 android:text="@string/bt_local3"
+                android:textColor="#454545"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@id/bt_local2"
-                app:layout_constraintTop_toTopOf="@id/layout_local"
+                app:layout_constraintTop_toTopOf="@id/bt_local2"
+                app:layout_constraintBottom_toBottomOf="@id/bt_local2"
                 android:onClick="@{mainfrag::onLocal3Click}"/>
 
             <com.thustop_00.widgets.NotoTextView
@@ -172,7 +178,7 @@
                 android:layout_marginTop="30dp"
                 android:text="@string/tv_local1"
                 android:textColor="@color/colorPrimary"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
                 app:layout_constraintTop_toBottomOf="@id/bt_local2" />
@@ -180,13 +186,25 @@
                 android:id="@+id/tv_local2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginTop="3dp"
                 android:text="@string/tv_local2"
-                android:textSize="10sp"
+                android:textSize="9sp"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintTop_toBottomOf="@id/tv_local1"
+                app:layout_constraintBottom_toTopOf="@id/tv_request"/>
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="29dp"
+                android:layout_marginBottom="28dp"
+                android:text="@string/tv_request"
+                android:textSize="10sp"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintTop_toBottomOf="@id/tv_local2"
+                app:layout_constraintStart_toStartOf="@id/layout_local"
+                app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintBottom_toBottomOf="@id/layout_local"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
