--- a/app/src/main/res/layout/fragment_register_done.xml
+++ b/app/src/main/res/layout/fragment_register_done.xml
@@ -62,7 +62,7 @@
             android:layout_marginEnd="15dp"
             android:paddingTop="17dp"
             android:paddingBottom="17dp"
-            android:background="@drawable/button_round_green"
+            android:background="@drawable/round_green"
             android:text="완료"
             android:textSize="16sp"
             android:textColor="@color/colorWhite"
