--- a/app/src/main/res/layout/fragment_register_passoword.xml
+++ b/app/src/main/res/layout/fragment_register_passoword.xml
@@ -18,58 +18,39 @@
 
         <com.thustop_00.widgets.NotoEditText
             android:id="@+id/et_pass"
-            style="@style/EtStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/button_round_outlineb6"
+            style="@style/EtLoginStyle"
             android:hint="@string/et_pass"
             android:imeOptions="actionNext"
-            android:textColor="@android:color/black"
-            android:textColorHint="#979797"
             app:layout_constraintBottom_toTopOf="@id/et_check"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline1"
-            app:layout_constraintVertical_bias="0.15"
-
+            app:layout_constraintVertical_bias="0.13"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <com.thustop_00.widgets.NotoEditText
             android:id="@+id/et_check"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
             android:layout_marginTop="15dp"
-            style="@style/EtStyle"
+            style="@style/EtLoginStyle"
             android:hint="@string/et_check"
-            android:textColorHint="#979797"
-            android:background="@drawable/button_round_outlineb6"
             app:layout_constraintTop_toBottomOf="@id/et_pass"
-            app:layout_constraintStart_toStartOf="@id/et_pass"
-            app:layout_constraintEnd_toEndOf="@id/et_pass"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-
             />
 
         <com.thustop_00.widgets.NotoButton
             android:id="@+id/bt_confirm"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/btStyle"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/button_round_c4"
-            android:paddingTop="17dp"
-            android:paddingBottom="17dp"
+            android:background="@drawable/round_gray_c4"
             android:text="@string/bt_confirm"
-            android:textColor="@color/colorWhite"
-            android:textSize="16sp"
             app:notoTextStyle="medium"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/et_check"
-            app:layout_constraintStart_toStartOf="@id/et_check"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/guideline1"
-            app:layout_constraintVertical_bias="0.9" />
+            app:layout_constraintVertical_bias="0.95" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
