--- a/app/src/main/res/layout/fragment_register_terms.xml
+++ b/app/src/main/res/layout/fragment_register_terms.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:button="@drawable/custom_checkbox"
+            android:button="@drawable/checkbox_round_sel"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/iv_agree"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:button="@drawable/custom_checkbox_2"
+            android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree_all"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
@@ -100,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:button="@drawable/custom_checkbox_2"
+            android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree1"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
@@ -122,7 +122,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:button="@drawable/custom_checkbox_2"
+            android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree2"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
@@ -144,7 +144,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:button="@drawable/custom_checkbox_2"
+            android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree3"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
@@ -165,7 +165,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:button="@drawable/custom_checkbox_2"
+            android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree4"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
@@ -187,7 +187,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:button="@drawable/custom_checkbox_2"
+            android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/cb_agree5"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -208,19 +208,16 @@
             android:id="@+id/bt_agree"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintWidth_percent="0.75"
             android:layout_marginBottom="50dp"
-            android:background="@drawable/button_round_c4"
+            android:background="@drawable/round_gray_c4"
             android:text="@string/bt_agree"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            app:notoTextStyle="bold"
+            android:textColor="#ffffff"
+            app:notoTextStyle="medium"
             android:onClick="@{AgreeTermsfrag::onAgreeClick}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/iv_agree"
-            app:layout_constraintStart_toStartOf="@id/iv_agree" />
-
-
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
