--- a/app/src/main/res/layout/item_route.xml
+++ b/app/src/main/res/layout/item_route.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="11dp"
         android:layout_marginEnd="18dp"
-        android:background="@drawable/outline_gray"
+        android:background="@drawable/outline_gray_fa_ee"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
