--- a/app/src/main/res/layout/region_dialog.xml
+++ b/app/src/main/res/layout/region_dialog.xml
@@ -23,7 +23,7 @@
         android:id="@+id/layout_local"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/main_sel_local"
+        android:background="@drawable/outline_gray_fa_ee"
         app:layout_constraintStart_toStartOf="@id/guideline4"
         app:layout_constraintTop_toBottomOf="@id/guideline3">
 
