--- a/app/src/main/res/layout/time_picker_dialog.xml
+++ b/app/src/main/res/layout/time_picker_dialog.xml
@@ -34,7 +34,7 @@
             android:text="확인"
             android:textColor="@color/colorWhite"
             style="@style/EtStyle"
-            android:background="@drawable/button_round_green"
+            android:background="@drawable/round_green"
 
             app:layout_constraintTop_toBottomOf="@id/timePicker"
             app:layout_constraintStart_toStartOf="parent"
