--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,10 +8,38 @@
     </style>
 
     <style name="EtStyle">
-        <item name="android:paddingTop">17dp</item>
-        <item name="android:paddingBottom">17dp</item>
-        <item name="android:paddingStart">20dp</item>
+        <item name="android:paddingStart">24dp</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#979797</item>
+    </style>
+    <style name="EtLoginStyle">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_marginStart">18dp</item>
+        <item name="android:layout_marginEnd">18dp</item>
+        <item name="android:paddingStart">24dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#979797</item>
+        <item name="android:textColorHint">#979797</item>
+        <item name="android:background">@drawable/outline_gray_cf</item>
+    </style>
+
+    <style name="btStyle">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_marginStart">18dp</item>
+        <item name="android:layout_marginEnd">18dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
+    <style name="EtRegStyle">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#979797</item>
     </style>
 
     <style name="SpinnerTimePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
